refactor: use native tables (#371)

--- a/src/kayenta/stages/kayentaStage/kayentaStageExecutionDetails.html
+++ b/src/kayenta/stages/kayentaStage/kayentaStageExecutionDetails.html
@@ -12,8 +12,9 @@
     </div>
 
     <div class="row">
-      <div class="col-md-12">
-        <canary-run-summaries canary-runs="kayentaStageDetailsCtrl.canaryRuns"
+      <div class="col-md-12 horizontal">
+        <canary-run-summaries class="horizontal flex-1"
+                              canary-runs="kayentaStageDetailsCtrl.canaryRuns"
                               first-scope-name="kayentaStageDetailsCtrl.firstScopeName"></canary-run-summaries>
       </div>
     </div>
